; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_sys_process.c_proc_readmem.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_sys_process.c_proc_readmem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.proc = type { i32 }

@UIO_READ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_readmem(%struct.thread* %0, %struct.proc* %1, i32 %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.thread*, align 8
  %7 = alloca %struct.proc*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store %struct.thread* %0, %struct.thread** %6, align 8
  store %struct.proc* %1, %struct.proc** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load %struct.thread*, %struct.thread** %6, align 8
  %12 = load %struct.proc*, %struct.proc** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i8*, i8** %9, align 8
  %15 = load i64, i64* %10, align 8
  %16 = load i32, i32* @UIO_READ, align 4
  %17 = call i32 @proc_iop(%struct.thread* %11, %struct.proc* %12, i32 %13, i8* %14, i64 %15, i32 %16)
  ret i32 %17
}

declare dso_local i32 @proc_iop(%struct.thread*, %struct.proc*, i32, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
